--- a/views/pages/aboutUs.ejs
+++ b/views/pages/aboutUs.ejs
@@ -40,9 +40,12 @@
     </div>
     <div class="col-md-6">
       <img
-        src="https://via.placeholder.com/500"
+        src="/img/why.webp"
+        width="400"
+        height="400"
+        allow="autoplay"
         alt="Why Choose Us"
-        class="img-fluid hover-scale"
+        class=" ms-5 rounded-circle mb-3"
       />
     </div>
   </div>
@@ -57,39 +60,45 @@
     <div class="col-md-4 text-center">
       <div class="team-member">
         <img
-          src="https://drive.google.com/file/d/1ohEaUQthVRoEjxDaCf8gkbU4A2l4HIPl/preview"
-          width="640"
-          height="480"
+          src="img/Atharva.jpg"
+          width="150"
+          height="150"
           allow="autoplay"
           alt="Team Member"
-          class="img-fluid rounded-circle mb-3"
+          class="rounded-circle mb-3"
         />
-        <h5>John Doe</h5>
-        <p>CEO & Founder</p>
+        <h5>Atharva Joshi</h5>
+        <!-- <p>CEO & Founder</p> -->
       </div>
     </div>
 
     <div class="col-md-4 text-center">
       <div class="team-member">
         <img
-          src="https://via.placeholder.com/150"
+          src="img/mansi.jpg"
+          width="150"
+          height="150"
+          allow="autoplay"
           alt="Team Member"
-          class="img-fluid rounded-circle mb-3"
+          class="rounded-circle mb-3"
         />
-        <h5>Jane Smith</h5>
-        <p>Head of Operations</p>
+        <h5>Mansi Ibitwar</h5>
+        <!-- <p>Head of Operations</p> -->
       </div>
     </div>
 
     <div class="col-md-4 text-center">
       <div class="team-member">
         <img
-          src="https://via.placeholder.com/150"
+          src="img/vasu.png"
+          width="150"
+          height="150"
+          allow="autoplay"
           alt="Team Member"
-          class="img-fluid rounded-circle mb-3"
+          class="rounded-circle mb-3"
         />
-        <h5>Emily Johnson</h5>
-        <p>Lead Developer</p>
+        <h5>Vishesh Makwana</h5>
+        <!-- <p>Lead Developer</p> -->
       </div>
     </div>
   </div>
@@ -106,12 +115,15 @@
         industry.
       </p>
     </div>
-    <div class="col-md-6">
+    <!-- <div class="col-md-6">
       <img
-        src="https://via.placeholder.com/500"
-        alt="Our Goals"
-        class="img-fluid hover-scale"
+        src="https://drive.google.com/file/d/1ohEaUQthVRoEjxDaCf8gkbU4A2l4HIPl/preview"
+        width="640"
+        height="480"
+        allow="autoplay"
+        alt="Team Member"
+        class="img-fluid rounded-circle mb-3"
       />
-    </div>
+    </div> -->
   </div>
 </div>
