--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -58,7 +58,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/script.js"></script>
-    <script src="/public/js/navbar.js"></script>
+    <!-- <script src="/js/script.js"></script> -->
+    <!-- <script src="/public/js/navbar.js"></script> -->
   </body>
 </html>
