--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -46,9 +46,9 @@
   </head>
   <body>
     <%- include("../includes/navbar.ejs") %>
-    <div class="container">
+    <!-- <div class="container"> -->
       <%- include("../includes/flash.ejs") %> <%- body %>
-    </div>
+    <!-- </div> -->
 
     <%- include("../includes/footer.ejs") %>
 
