--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ search-container {
 
 .navbar {
   height: 4rem;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   background-color: #f8f9fa;
   transition: background-color 0.5s ease;
 }
