--- a/views/pages/service.ejs
+++ b/views/pages/service.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate.ejs") %>
-<h4 class="text-center">Home Services at Your Doorstep</h4>
-<div class="all-services mt-5">
+<h4 class="text-center mt-4">Home Services at Your Doorstep</h4>
+<div class="all-services mt-5 ms-5">
   <p class="text-center">What are you looking for?</p>
   <br />
   <div class="row all-services-cards">
